# aoc

./: .gitignore  README.md
1/: sol.py
11/: sol.py
2/: sol.py
3/: sol.py
4/: sol.py
5/: sol.py
6/: sol.py
9/: sol_1.py
y22/10/: output.txt  sol.py
y22/2/: sol.py
y22/6/: sol.py
y22/7/: sol.py
y22/8/: sol.py
y22/9/: sol.py
y23/: Cargo.toml
y23/src/: 1a.rs  1b.rs  2a.rs  2b.rs  3a.rs  3b.rs  4_a_and_b.rs  4_only_a.rs
